# zk-vault-app

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md  input.css  package-lock.json
assets/: dx-components-theme.css  main.css  tailwind.css
crates/core/: Cargo.toml
crates/core/src/: api.rs  auth.rs  config.rs  crypto.rs  crypto_stub.rs  lib.rs  manifest.rs  state.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  main.rs  routes.rs
crates/ui/src/components/: header.rs  mod.rs  sidebar.rs
crates/ui/src/dx_components/: mod.rs
crates/ui/src/dx_components/badge/: style.css
crates/ui/src/dx_components/button/: style.css
crates/ui/src/dx_components/card/: style.css
crates/ui/src/dx_components/input/: style.css
crates/ui/src/dx_components/label/: style.css
crates/ui/src/dx_components/separator/: style.css
crates/ui/src/dx_components/sidebar/: component.rs
crates/ui/src/pages/: backup.rs  dashboard.rs  login.rs  mod.rs  register.rs  restore.rs  settings.rs  sources.rs  verify.rs
