[workspace]
members = ["crates/core", "crates/ui"]
default-members = ["crates/ui"]
resolver = "2"

[workspace.dependencies]
dioxus = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
