[package]
name = "zk-vault-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Crypto — same crates and versions as zk-vault CLI for keystore interoperability
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
argon2 = "0.5"
chacha20poly1305 = "0.10"
blake3 = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
hex = "0.4"
dirs = "6"
