[package]
name = "zk-vault-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
dirs = "6"
uuid = { workspace = true }
chrono = { workspace = true }
toml = "0.8"

# Crypto deps — native only (C FFI, not wasm-compatible)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
argon2 = "0.5"
chacha20poly1305 = "0.10"
blake3 = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Wasm-compatible crypto subset
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
