[package]
name = "zk-vault-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
zk-vault-core = { path = "../core" }
dioxus = { workspace = true, features = ["desktop", "web", "mobile", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

chrono = { workspace = true }
tracing-subscriber = "0.3"
